[project]
name = "voltis"
version = "1.0.0a1"
description = "Library for ebooks and comics (& co)"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.0",
    "bcrypt>=5.0.0",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.126.0",
    "httpx>=0.28.1",
    "imagesize>=1.4.1",
    "lxml>=6.0.2",
    "orjson>=3.11.5",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
voltis = "voltis.cli.main:main"

[tool.uv]
package = true
config-settings = { editable_mode = "compat" }

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "standard"
# extraPaths = ["src"]
include = ["src"]

[dependency-groups]
dev = ["pyright>=1.1.407", "pytest>=9.0.2", "ruff>=0.14.10"]
